--- a/_posts/2020-08-01-true-ai.md
+++ b/_posts/2020-08-01-true-ai.md
@@ -5,11 +5,24 @@ title: True AI
 ---
 
 1. Not all AI are the same.
-    - Most of the current research focused on narrow AI: software designed to perform a particular task or a few of them
+    - Most current research focused on narrow AI: software designed to perform a particular task or a few of them
     - Some researchers aspire to create conscious AI or artificial life.
 2. The word "artifical intelligence" implies a powerful tool.
     - "Artificial" means man-made.
     - "Intelligence" is the ability to do useful things.
     - There's nothing in the word that implies consciousness or life-like properties.
 3. True AI must be beneficial for humans
- 
+    - I consider this an axiom.
+4. AI must always be a tool.
+    - Artificial life will compete with humans for resources.
+    - Conscious AI will update its goals and gradually drift from what is beneficial for humans.
+    - It is ethically troublesome to control a conscious and highly intelligent entity.
+5. AI must be widely and evenly distributed.
+    - Tools confer power to their owners.
+    - History proves that concentrated power brings misery to the majority.
+    - More power means more misery and destruction.
+6. True AI is general AI.
+    - True AI can perform a variety of tasks with the same or higher performance than an adult human.
+    - True AI can perform a new task well given little instructions (either in a natural language or programmatically) or training examples.
+7. Where humans can generalize, true AI should generalize in the same way.
+    - [Principle of least astonishment](https://en.wikipedia.org/wiki/Principle_of_least_astonishment)
