improve presentation, add content

--- a/_posts/2020-08-01-true-ai.md
+++ b/_posts/2020-08-01-true-ai.md
@@ -1,28 +1,37 @@
 ---
-layout: post
+layout: quickpost
 author: Minh Le
 title: True AI
 ---
 
-1. Not all AI are the same.
-    - Most current research focused on narrow AI: software designed to perform a particular task or a few of them
-    - Some researchers aspire to create conscious AI or artificial life.
-2. The word "artifical intelligence" implies a powerful tool.
-    - "Artificial" means man-made.
-    - "Intelligence" is the ability to do useful things.
-    - There's nothing in the word that implies consciousness or life-like properties.
-3. True AI must be beneficial for humans
-    - I consider this an axiom.
-4. AI must always be a tool.
-    - Artificial life will compete with humans for resources.
-    - Conscious AI will update its goals and gradually drift from what is beneficial for humans.
-    - It is ethically troublesome to control a conscious and highly intelligent entity.
-5. AI must be widely and evenly distributed.
-    - Tools confer power to their owners.
-    - History proves that concentrated power brings misery to the majority.
-    - More power means more misery and destruction.
+## Definition
+
 6. True AI is general AI.
-    - True AI can perform a variety of tasks with the same or higher performance than an adult human.
-    - True AI can perform a new task well given little instructions (either in a natural language or programmatically) or training examples.
+    1. True AI can perform a variety of tasks with the same or higher performance than an adult human.
+    1. True AI can perform a new task well given little instructions (either in a natural language or programmatically) or training examples.
+3. True AI must be beneficial for humans
+    1. I consider this an axiom.
+
+## Other types of AI
+
+1. Most current research focused on narrow AI: software designed to perform a particular task or a few of them.
+    1. Narrow AI has solved many problems and created many others.
+    2. Narrow AI is our chance to learn how to regulate AI before a general AI appears.
+2. Some researchers aspire to create conscious AI or artificial life.
+
+## Properties of true AI
+
+2. The word "artifical intelligence" implies a cognitive tool.
+    1. "Artificial" means man-made.
+    1. "Intelligence" is the ability to do useful things.
+    1. There's nothing in the word that implies consciousness or life-like properties.
+4. AI must always be a tool.
+    1. Artificial life will compete with humans for resources.
+    1. Conscious AI will update its goals and gradually drift from what is beneficial for humans.
+    1. It is ethically troublesome to control a conscious and highly intelligent entity.
+5. AI must be widely and evenly distributed.
+    1. Tools confer power to their owners.
+    1. History shows that concentrated power brings misery to the majority.
+    1. More power means more misery and destruction.
 7. Where humans can generalize, true AI should generalize in the same way.
-    - [Principle of least astonishment](https://en.wikipedia.org/wiki/Principle_of_least_astonishment)
+    1. [Principle of least astonishment](https://en.wikipedia.org/wiki/Principle_of_least_astonishment)
